# tree-sitter-alcha

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  Readme.md  binding.gyp  get_queries.sh  go.mod  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  set_queries.sh  setup.py  test.sh  tree-sitter.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-alcha.pc.in
bindings/c/tree_sitter/: tree-sitter-alcha.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_alcha/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAlchaTests/: TreeSitterAlchaTests.swift
queries/: highlights.scm  injections.scm
src/: TokenTree.h  TokenTree.inc  TokenType.h  TokenType.inc  core.h  grammar.json  node-types.json  parser.c  scanner.c
test/: temp.alc
test/corpus/: Modules.alc  autogen.alc  comments.alc  expressions.alc  identifiers.alc  literals.alc  modules.alc  verification.alc
