[package]
name = "tree-sitter-alcha"
description = "Alcha grammar for tree-sitter"
version = "0.1.0"
authors = ["John-Philip Taylor"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "alcha"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jpt13653903/tree-sitter-alcha"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
